# merian-quake

./: meson.build
res/shader/: raytrace.glsl
res/shader/gbuffer/: gbuffer.comp
res/shader/render_mc/: grid.h  mc.glsl  quake.comp  volume.comp  volume_forward_project.comp
res/shader/render_mcpg/: mcpg.comp  volume.comp
res/shader/render_restir/: restir_di_common.glsl  restir_di_generate_samples_bsdf.comp  restir_di_shade.comp  restir_di_spatial_reuse.comp  restir_di_temporal_reuse.comp
src/: main.cpp  merian-quake.cpp
src/game/: draw.frag  draw.vert  meson.build  quake_helpers.cpp  quake_node.cpp  quake_node.hpp
src/gbuffer/: gbuffer.comp  gbuffer.cpp  gbuffer.frag  gbuffer.hpp  meson.build
src/hud/: hud.cpp  hud.hpp
src/quake/: config.h  gbuf.comp  layout.glsl  mc.glsl  quake.comp  quake_node.cpp  quake_node.hpp  raytrace.glsl  shading.glsl  volume.comp
src/render_mc/: grid.h  mc.glsl  quake.comp  raytrace.glsl  render_markovchain.cpp  render_markovchain.hpp  volume.comp
src/render_mcpg/: render_mcpg.hpp
src/render_restir/: layout.glsl  renderer_restir.cpp  renderer_restir.hpp
src/render_ssmm/: render_ssmm.hpp
src/renderer/: render_markovchain.cpp  render_markovchain.hpp
